--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made with ❤️ by Antonette.
   </footer>
 
   <script src="index.js" charset="utf-8">
